# bazel-experiments

./: .gitignore
alpine-go/: README.md  WORKSPACE
alpine-go/sunflower/: BUILD.bazel  echo.sh
camel/: README.md  WORKSPACE
camel/wdjhdocker/: BUILD.bazel  testdocker.sh
distroless/: .bazelrc  WORKSPACE
distroless/simple-go/: BUILD.bazel  main.go
