load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

container_layer(
    name = "wdjhtestdocker-files",
    directory = "/app",
    files = [
        ":testdocker.sh",
    ],
)

container_image(
    name = "wdjhtestdocker",
    base = "@alpine-base//image",
    entrypoint = ["/app/testdocker.sh"],
    layers = [
        ":wdjhtestdocker-files",
    ],
    workdir = "/app",
)
